[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "tox-isolation"
version = "0.0.0"
description = "Runs pytest in isolation."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/tox-isolation"
"Issue Tracker" = "https://github.com/domdfcoding/tox-isolation/issues"
"Source Code" = "https://github.com/domdfcoding/tox-isolation"

[tool.mkrecipe]
conda-channels = [ "domdfcoding",]
extras = "all"
license-key = "MIT"
package = "tox_isolation"

[project.entry-points.tox]
isolation = "tox_isolation"
